<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="hello">Hello, User</string>
    <string name="user">user</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="flashcards">FlashCards</string>
    <string name="quizzes">Quizzes</string>
    <string name="reading">Reading</string>
    <string name="games">Games</string>
</resources>