<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/accent"
        app:itemTextColor="@color/background"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/header"
            android:padding="5dp"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/background"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="40dp"
                android:padding="3dp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp">
                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:background="@drawable/items_bg"
                    android:layout_marginTop="30dp"
                    android:padding="3dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reading"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="50dp">
                        </TextView>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="50dp"
                        android:padding="8dp"
                        android:src="@drawable/flashcard"
                        android:contentDescription="@string/reading">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:background="@drawable/items_bg"
                    android:layout_marginTop="30dp"
                    android:padding="3dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quizzes"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="50dp">
                        </TextView>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="50dp"
                        android:padding="8dp"
                        android:src="@drawable/flashcard"
                        android:contentDescription="@string/quizzes">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:background="@drawable/items_bg"
                    android:layout_marginTop="30dp"
                    android:padding="3dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flashcards"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="50dp">
                        </TextView>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="20dp"
                        android:padding="8dp"
                        android:src="@drawable/flashcard"
                        android:contentDescription="@string/flashcards">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:background="@drawable/items_bg"
                    android:layout_marginTop="30dp"
                    android:padding="3dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/games"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="50dp">
                        </TextView>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="60dp"
                        android:padding="8dp"
                        android:src="@drawable/flashcard"
                        android:contentDescription="@string/games">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:background="@drawable/items_bg"
                    android:layout_marginTop="30dp"
                    android:padding="3dp"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="50dp">
                        </TextView>
                    </LinearLayout>
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginStart="60dp"
                        android:padding="8dp"
                        android:src="@drawable/flashcard"
                        android:contentDescription="@string/profile">
                    </ImageView>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


</RelativeLayout>